Fixing iOS views and overflow on content and texts

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -17,6 +17,7 @@
 .content-container {
   position: fixed;
   height: 150vh;
+  overflow: hidden;
 }
 
 .cover-text-container {
@@ -94,6 +95,7 @@ input {
   position: fixed;
   height: 100vh;
   width: 100%;
+  overflow: hidden;
 }
 
 .mobile-background-image {
